# corkboard-backend

./: .gitignore  Cargo.toml  docker-compose.yaml
migrations/2018-11-04-072021_create_vote_opportunities/: down.sql  up.sql
src/: db.rs  db_schema.rs  main.rs  schema.rs
