[package]
name = "corkboard-backend"
version = "0.1.0"
authors = ["Jacob Mischka <jacob@mischka.me>"]

[dependencies]
juniper = "0.10.0"
chrono = "0.4.6"
geo = "0.10.2"
serde = "1.0.80"
serde_json = "1.0.32"
serde_derive = "1.0.80"
actix = "0.7.5"
actix-web = "0.7.13"
env_logger = "0.5.13"
futures = "0.1.25"
geo-types = "0.2.0"
diesel = { version = "1.3.3", features = ["postgres", "chrono"] }
uom = "0.20.1"
dotenv = "0.13.0"
